// DBML Schema Definition for EdTech LMS - MongoDB
// Generated by teamwork_preview_explorer (Explorer 3)

Table users {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  email string [unique, not null, note: 'Unique user email']
  passwordHash string [null]
  fullName string [not null]
  avatarURL string [null]
  cognitoSub string [unique, null]
  isActive boolean [not null, default: true]
  createdAt date [not null]
  updatedAt date [not null]
}

Table roles {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  roleName string [unique, not null]
  createdAt date [not null]
}

Table userroles {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  userId objectId [not null]
  roleId objectId [not null]
  createdAt date [not null]
}

Table classes {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  name string [not null]
  description string [null]
  classCode string [unique, not null]
  teacherId string [not null, note: 'Logical FK to User.id']
  status string [not null, default: 'active']
  createdAt date [not null]
  updatedAt date [not null]
}

Table classsettings {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [unique, not null, note: 'FK to Class.id (1:1)']
  allowStudentPosts boolean [not null, default: true]
  allowStudentComments boolean [not null, default: true]
  theme string [not null, default: 'default']
  createdAt date [not null]
  updatedAt date [not null]
}

Table enrollments {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  studentId string [not null, note: 'Logical FK to User.id']
  status string [not null, default: 'enrolled']
  enrolledAt date [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table topics {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  title string [not null]
  description string [null]
  order number [not null, default: 0]
  createdAt date [not null]
  updatedAt date [not null]
}

Table materials {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  topicId objectId [not null, note: 'FK to Topic.id']
  title string [not null]
  description string [null]
  fileUrl string [not null]
  fileType string [null]
  uploadedBy string [not null, note: 'Logical FK to User.id']
  createdAt date [not null]
  updatedAt date [not null]
}

Table exercises {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  topicId objectId [not null, note: 'FK to Topic.id']
  title string [not null]
  description string [null]
  dueDate date [null]
  maxPoints number [not null, default: 100.0]
  createdBy string [not null, note: 'Logical FK to User.id']
  createdAt date [not null]
  updatedAt date [not null]
}

Table submissions {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  exerciseId objectId [not null, note: 'FK to Exercise.id']
  studentId string [not null, note: 'Logical FK to User.id']
  submittedAt date [not null]
  status string [not null, default: 'submitted']
  points number [null]
  feedback string [null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table submissionfiles {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  submissionId objectId [not null, note: 'FK to Submission.id']
  fileUrl string [not null]
  fileName string [not null]
  fileSize number [null]
  uploadedAt date [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table grades {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  submissionId objectId [not null, note: 'FK to Submission.id']
  gradedBy string [not null, note: 'Logical FK to User.id']
  points number [not null]
  feedback string [null]
  gradedAt date [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table privatenotes {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  submissionId objectId [not null, note: 'FK to Submission.id']
  senderId string [not null, note: 'Logical FK to User.id']
  receiverId string [not null, note: 'Logical FK to User.id']
  content string [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table attendancelogs {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  studentId string [not null, note: 'Logical FK to User.id']
  date date [not null]
  status string [not null]
  recordedBy string [not null, note: 'Logical FK to User.id']
  createdAt date [not null]
  updatedAt date [not null]
}

Table alertthresholds {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  metricType string [not null]
  thresholdValue number [not null]
  severity string [not null, default: 'medium']
  createdAt date [not null]
  updatedAt date [not null]
}

Table studentperformancemetrics {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  studentId string [not null, note: 'Logical FK to User.id']
  attendanceRate number [not null, default: 100.0]
  assignmentCompletionRate number [not null, default: 100.0]
  averageGrade number [not null, default: 0.0]
  lastUpdated date [not null]
  createdAt date [not null]
  updatedAt date [not null]
  currentAverage number [not null, default: 0]
  missingCount number [not null, default: 0]
  riskLevel string [not null, default: 'Good']
}

Table alertlogs {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  studentId string [not null, note: 'Logical FK to User.id']
  alertType string [not null]
  message string [not null]
  severity string [not null, default: 'medium']
  status string [not null, default: 'unread']
  createdAt date [not null]
  updatedAt date [not null]
}

Table classposts {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  authorId string [not null, note: 'Logical FK to User.id']
  content string [not null]
  attachmentUrls "string[]" [not null, note: 'Array of attachment links']
  createdAt date [not null]
  updatedAt date [not null]
}

Table postcomments {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  postId objectId [not null, note: 'FK to ClassPost.id']
  authorId string [not null, note: 'Logical FK to User.id']
  content string [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table quizbanks {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  classId objectId [not null, note: 'FK to Class.id']
  title string [not null]
  questions object [null]
  createdBy string [not null, note: 'Logical FK to User.id']
  createdAt date [not null]
  updatedAt date [not null]
}

Table notifications {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  userId objectId [not null, note: 'Logical FK to User.id']
  title string [not null]
  content string [not null]
  isRead boolean [not null, default: false]
  type string [not null, default: 'general']
  createdAt date [not null]
  updatedAt date [not null]
}

Table devicetokens {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  userId objectId [not null, note: 'Logical FK to User.id']
  token string [not null]
  deviceType string [not null, default: 'web']
  createdAt date [not null]
  updatedAt date [not null]
}

Table systemlogs {
  _id objectId [pk, unique, note: 'PK (ObjectId)']
  serviceName string [not null, default: 'core-api']
  level string [not null, default: 'info']
  message string [not null]
  metadata object [null]
  timestamp date [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

// Relations
Ref: userroles.userId > users._id
Ref: userroles.roleId > roles._id
Ref: classes.teacherId > users._id
Ref: classsettings.classId - classes._id
Ref: enrollments.classId > classes._id
Ref: enrollments.studentId > users._id
Ref: topics.classId > classes._id
Ref: materials.topicId > topics._id
Ref: materials.uploadedBy > users._id
Ref: exercises.topicId > topics._id
Ref: exercises.createdBy > users._id
Ref: submissions.exerciseId > exercises._id
Ref: submissions.studentId > users._id
Ref: submissionfiles.submissionId > submissions._id
Ref: grades.submissionId > submissions._id
Ref: grades.gradedBy > users._id
Ref: privatenotes.submissionId > submissions._id
Ref: privatenotes.senderId > users._id
Ref: privatenotes.receiverId > users._id
Ref: attendancelogs.classId > classes._id
Ref: attendancelogs.studentId > users._id
Ref: attendancelogs.recordedBy > users._id
Ref: alertthresholds.classId > classes._id
Ref: studentperformancemetrics.classId > classes._id
Ref: studentperformancemetrics.studentId > users._id
Ref: alertlogs.classId > classes._id
Ref: alertlogs.studentId > users._id
Ref: classposts.classId > classes._id
Ref: classposts.authorId > users._id
Ref: postcomments.postId > classposts._id
Ref: postcomments.authorId > users._id
Ref: quizbanks.classId > classes._id
Ref: quizbanks.createdBy > users._id
Ref: notifications.userId > users._id
Ref: devicetokens.userId > users._id